# yolov5_deepsort_tensorrt

./: CMakeLists.txt  README.md  main.cpp
DeepSORT/: CMakeLists.txt  track_deepsort.cpp  track_deepsort.h
DeepSORT/DeepAppearanceDescriptor/: dataType.h  model.h
DeepSORT/KalmanFilter/: track.cpp  track.h  tracker.cpp  tracker.h
yolov5/: CMakeLists.txt  Loader.cpp  Loader.h  common.hpp  gen_wts.py  yololayer.h  yolov5.cpp  yolov5.h
